# solana-bpf

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.js  app.jsx  app.svelte  build.js  build.sh  criterion.h  docker.sh  index.html  package-lock.json  package.json  run.js  solana_test.c  test.js  test.patch  webpage.html
.devcontainer/: devcontainer.json
alon/: package-lock.json  package.json  svelte.config.js
alon/src/: app.html
alon/src/routes/: clang-solana-bpf.js  clang-solana-bpf.wasm  index.svelte  lld.js  lld.wasm
src/: clang.cpp
test/: empty.c  logging.c
